<resources>
    <string name="accept">Accept</string>
    <string name="accept_all_from_this_user">Accept all from this user</string>
    <string name="accounts">Accounts</string>
    <string name="account_share_request">Account Share Request</string>
    <string name="action_settings">settings</string>
    <string name="additional_note_here">Additional note here</string>
    <string name="all">all</string>
    <string name="all_time">All Time</string>
    <string name="all_value">All Value"</string>
    <string name="annually">annually</string>
    <string name="app_name">Logalong</string>
    <string name="apply_to_all_accounts">apply to all accounts</string>
    <string name="backed_up_on">Backed up on</string>
    <string name="backup_data_to_sd_card">Backup data to SD card</string>
    <string name="balance">Balance</string>
    <string name="categories">Categories</string>
    <string name="count_time">time</string>
    <string name="count_times">times</string>
    <string name="create_new_user_id">Create new user ID</string>
    <string name="creating_user">Creating user ...</string>
    <string name="data_backup">Data Backup</string>
    <string name="decline">Decline</string>
    <string name="delete">Delete</string>
    <string name="delete_now">Delete now</string>
    <string name="disabled">disabled</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="edit_time">Edit Time</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="expense">Expense</string>
    <string name="filter_by">Filter by</string>
    <string name="hint_account_share_accept">Once accepted, all account data are shared with the requester, and users the requester already shared this account with.</string>
    <string name="hint_additional_note">Additional note here</string>
    <string name="hint_category_not_specified">Category not specified</string>
    <string name="hint_choose_account">Choose account</string>
    <string name="hint_data_backup_to_sd_card_done">Data successfully backed up to SD card</string>
    <string name="hint_data_backup_to_sd_card_error">Unable to backup data to SD card</string>
    <string name="hint_data_restore_from_sd_card_done">Data successfully restored from SD card</string>
    <string name="hint_data_restore_from_sd_card_error">Unable to restore data from SD card</string>
    <string name="hint_enter_your_email_here">Enter your email here</string>
    <string name="hint_payee_not_specified">Payee not specified</string>
    <string name="hint_payer_not_specified">Payer not specified</string>
    <string name="hint_primary_category_sub_category">Category : Sub-category</string>
    <string name="hint_tag_not_specified">Tag not specified</string>
    <string name="hint_user_id">userid</string>
    <string name="hint_user_name">Your Name</string>
    <string name="hint_user_number">Your Number</string>
    <string name="hint_user_number_full">( to recover lost password )</string>
    <string name="ignore">Ignore</string>
    <string name="income">Income</string>
    <string name="loading">Loading ...</string>
    <string name="login">Log In</string>
    <string name="login_with_existing_user_id">Login with existing user ID</string>
    <string name="logging_in">Logging in ... </string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="monthly">monthly</string>
    <string name="new_account">New Account</string>
    <string name="new_category">New Category</string>
    <string name="new_log">Logalong</string>
    <string name="new_tag">New Tag</string>
    <string name="new_user_name">New User Name</string>
    <string name="new_vendor">New Payee/Payer</string>
    <string name="note_reset_password_email">Please follow instructions in email to reset password</string>
    <string name="note_user_id_available">User ID available</string>
    <string name="password">Password</string>
    <string name="password_hint">password</string>
    <string name="payee">Payee</string>
    <string name="payee_payers">Payee/Payers</string>
    <string name="payer">Payer</string>
    <string name="please_complete_your_profile">Please complete your profile settings then come back.</string>
    <string name="profile">Profile</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="quarterly">quarterly</string>
    <string name="record_time">Record Time</string>
    <string name="reminder">Reminder</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="rename_account">Rename Account</string>
    <string name="rename_category">Rename Category</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="rename_vendor">Rename Vendor</string>
    <string name="repeat_every">Repeat every</string>
    <string name="repeat">Repeat</string>
    <string name="reports">Reports</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset password</string>
    <string name="restore_db">Restore data</string>
    <string name="restore_data_from_sd_card">Restore data from SD card</string>
    <string name="restored_on">Restored on</string>
    <string name="restore_now">Restore now</string>
    <string name="save">Save</string>
    <string name="scheduled_transactions">Scheduled Transactions</string>
    <string name="select_account">Select Account</string>
    <string name="select_accounts">Select Accounts</string>
    <string name="select_all">all</string>
    <string name="select_category">Select Category</string>
    <string name="select_categories">Select Categories</string>
    <string name="select_records">Select Records</string>
    <string name="select_tag">Select Tag</string>
    <string name="select_tags">Select Tags</string>
    <string name="select_types">Select Types</string>
    <string name="select_vendor">Select Payer/Payee</string>
    <string name="select_vendors">Select Payer/Payee</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_account_with">Share account with</string>
    <string name="show_all">Show All</string>
    <string name="show_balance">Show balance</string>
    <string name="show_password">show password</string>
    <string name="synchronizing_database">Synchronizing database ...</string>
    <string name="tags">Tags</string>
    <string name="to">to</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_from">FROM:</string>
    <string name="transfer_from_report_view">from:</string>
    <string name="transfer_to">TO:</string>
    <string name="transfer_to_report_view">to:</string>
    <string name="types">Types</string>
    <string name="undo">Undo</string>
    <string name="unlimited">unlimited</string>
    <string name="unshare">Unshare</string>
    <string name="unshare_and_delete">Unshare and delete</string>
    <string name="unspecified_tag">Tag not specified</string>
    <string name="unspecified_vendor">Vendor not specified</string>
    <string name="updating_profile">Updating profile ...</string>
    <string name="user_id">User ID</string>
    <string name="user_name">Name</string>
    <string name="user_number">Number</string>
    <string name="version">Version</string>
    <string name="warning_delete_account">Account and all its associated records will be permanently deleted.</string>
    <string name="warning_delete_category">Category will be permanently deleted.</string>
    <string name="warning_delete_record">Record will be permanently deleted.</string>
    <string name="warning_delete_tag">Tag will be permanently deleted.</string>
    <string name="warning_delete_vendor">Payer/Payee will be permanently deleted.</string>
    <string name="warning_password_mismatch">Password mismatch</string>
    <string name="warning_restore_db">To keep data consistent, please restore on fresh App installation, and setup account share again if any were shared.</string>
    <string name="warning_unable_to_complete_share_request">Unable to complete share request</string>
    <string name="warning_unable_to_find_share_user">Unable to find user</string>
    <string name="warning_unable_to_connect">Unable to connect to server, please try again later.</string>
    <string name="warning_unable_to_create_update_profile">Unable to create/update user profile, please try later.</string>
    <string name="warning_unshare_and_delete_account">Account and all its records will be removed.</string>
    <string name="warning_user_id_taken">User ID already taken by someone else</string>
    <string name="warning_user_id_invalid">Invalid user ID</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
</resources>
