<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/backupView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/dialog_row_bgd"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/backup_data_to_sd_card"
            android:textColor="@color/base_text_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/backed_up_on"
                android:textColor="@color/gray_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/backupDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="May 18 2015"
                android:textColor="@color/gray_text_color"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restoreView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/dialog_row_bgd"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/restore_data_from_sd_card"
            android:textColor="@color/base_text_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/restored_on"
                android:textColor="@color/gray_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/restoreDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="May 18 2015"
                android:textColor="@color/gray_text_color"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:singleLine="false"
        android:textColor="@color/red_text_color"
        android:textSize="16sp"
        android:visibility="invisible" />
</LinearLayout>


