<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selectType"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right"
    android:background="@drawable/new_log_bgd"
    android:orientation="vertical"
    android:padding="2dp">

    <LinearLayout
        android:id="@+id/expense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:background="@drawable/expense_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/expense"
            android:textColor="@color/base_black_text_color"
            android:textSize="@dimen/settings_option_text_size" />

        <ImageView
            android:layout_width="@dimen/settings_row_icon_w_small"
            android:layout_height="@dimen/settings_row_icon_h_small"
            android:background="@drawable/ic_action_right_dark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/income"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginTop="1dp"
        android:background="@drawable/income_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/income"
            android:textColor="@color/base_black_text_color"
            android:textSize="@dimen/settings_option_text_size" />

        <ImageView
            android:layout_width="@dimen/settings_row_icon_w_small"
            android:layout_height="@dimen/settings_row_icon_h_small"
            android:background="@drawable/ic_action_right_dark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginTop="1dp"
        android:background="@drawable/transfer_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/transfer"
            android:textColor="@color/base_black_text_color"
            android:textSize="@dimen/settings_option_text_size" />

        <ImageView
            android:layout_width="@dimen/settings_row_icon_w_small"
            android:layout_height="@dimen/settings_row_icon_h_small"
            android:background="@drawable/ic_action_right_dark" />
    </LinearLayout>
</LinearLayout>
