<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/catchAll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_bg_color"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:background="@drawable/dialog_bgd"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_height"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:padding="6dp"
                android:singleLine="true"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/settings_option_text_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/closeDialog"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_cancel" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBar"
            android:padding="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/dialog_title_bar_drop_shadow"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/payeePayerType"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/row_selector"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/checkBoxPayee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:button="@drawable/btn_check_holo_light"
                        android:clickable="false"
                        android:focusable="false"
                        android:text="@string/payee"
                        android:textColor="@color/base_text_color"
                        android:textSize="15sp" />

                    <CheckBox
                        android:id="@+id/checkBoxPayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/btn_check_holo_light"
                        android:clickable="false"
                        android:focusable="false"
                        android:text="@string/payer"
                        android:textColor="@color/base_text_color"

                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/accountShowBalanceView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/row_selector"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/checkboxAccountShowBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:button="@drawable/btn_check_holo_light"
                        android:clickable="false"
                        android:focusable="false"
                        android:text="@string/show_balance"
                        android:textColor="@color/base_text_color"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/remove"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/row_selector"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/delete"
                        android:textColor="@color/base_text_color"
                        android:textSize="@dimen/settings_option_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rename"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/row_selector"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/rename"
                        android:textColor="@color/base_text_color"
                        android:textSize="@dimen/settings_option_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/associated_categories"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/row_selector"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/categories"
                        android:textColor="@color/base_text_color"
                        android:textSize="@dimen/settings_option_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!--&lt;!&ndash;ProgressBara-->
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyleInverse"
    android:layout_width="25dp"
    android:layout_height="25dp"
    android:layout_centerInParent="true"
    android:visibility="gone" / -->
</LinearLayout>

